[gd_scene load_steps=7 format=3 uid="uid://h88wb6b4pg18"]

[ext_resource type="Texture2D" uid="uid://cwhehcootbedx" path="res://assets/sprites/apple_trees.png" id="1_5cwfm"]
[ext_resource type="Script" path="res://scripts/apple_trees.gd" id="1_h7vl6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3f407"]
atlas = ExtResource("1_5cwfm")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l53fd"]
atlas = ExtResource("1_5cwfm")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_i0a1o"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3f407")
}],
"loop": true,
"name": &"no_apples",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l53fd")
}],
"loop": true,
"name": &"with_apples",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_sym61"]
radius = 21.0238

[node name="apple_trees" type="Node2D"]
script = ExtResource("1_h7vl6")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_i0a1o")
animation = &"with_apples"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_sym61")

[node name="Timer" type="Timer" parent="."]
wait_time = 20.0

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
